--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>My First Web AR Scene</title>
+  <title>Mi primera escena AR web</title>
 
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   
@@ -17,16 +17,16 @@
   
   <a-scene >
 
-    <!--Assets Management-->
+    <!--Controlador de recursos-->
     <a-assets >
 
     </a-assets>
 
-    <!--GLTF Models-->
+    <!--Modelos GLTF-->
 
 
 
-    <!-- Hiro Marker -->
+    <!-- Marcador Hiro -->
     
 
   </a-scene>
